# scotty-tools

./: .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  pyproject.toml  utils.py
examples/: quickstart.ipynb  quickstart.ju.py  simulate_trajectory.ipynb  simulate_trajectory.ju.py
models/: __init__.py
models/cluster/: __init__.py  tracter.py  tracter_coarse.py  tracter_kernel_approx.py
models/trajectory/: __init__.py  ot.py  wot.py
plotting/: __init__.py  compare_trajectory_entropy.py  gene_trajectory.py  sankey.py  subsets.py  utils.py
src/models/cluster/: __init__.py  tracter.py  tracter_aa.py  tracter_kh.py  tracter_knn.py
src/plotting/: _flowplot.py
src/scotty/: __init__.py
src/scotty/models/: __init__.py
src/scotty/plotting/: __init__.py  compare_trajectory_entropy.py  gene_trajectory.py  sankey.py
src/scotty/simulate/: __init__.py  counts.py  latents.py  utils.py
src/scotty/tools/: __init__.py  metrics.py  trajectories.py
src/scrtt/: __init__.py  logging.py
src/scrtt/models/: __init__.py
src/scrtt/plotting/: __init__.py  _flowplot.py  compare_trajectory_entropy.py  gene_trajectory.py  sankey.py
src/scrtt/tools/: __init__.py  kh.py  metrics.py  trajectories.py
src/tools/: metrics.py  trajectories.py
tests/: conftest.py
tests/scotty/models/: test_diffexp.py  test_featurize.py  test_ot_models.py  test_tracter.py  test_tracter_kh.py  test_wot.py
tests/scotty/plotting/: test_flowplot.py  test_sankey.py
tests/scotty/simulate/: test_latents.py
tests/scrtt/models/: test_wot.py  (+2 more)
tools/: __init__.py  metrics.py  trajectories.py
(+18 files in other folders)
