[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'scotty-tools'
version = '0.0.0'
authors = [
    { name='Alec Plotkin', email='alp.plotkin@gmail.com' },
]
description = 'Tools for downstream analysis of single cell optimal transport trajectory models.'
readme = 'README.md'
requires-python = '>=3.7'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'scanpy',
    'scikit-learn',
    'matplotlib',
    'pandas',
]

[project.urls]
'Homepage' = 'https://github.com/alecplotkin/scotty-tools'
'Bug Tracker' = 'https://github.com/alecplotkin/scotty-tools/issues'
